[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynomina"
description = "Personal finance management utility"
keywords = ["finance", "money", "management","nicegui"]
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
  # https://pypi.org/project/pybasemkit/
  # https://github.com/WolfgangFahl/pybasemkit
  # Python base module kit: YAML/JSON I/O, structured logging, CLI tooling, shell execution, and remote pydevd debug support.
  "pybasemkit>=0.0.2",
  # https://pypi.org/project/pylodstorage/
  "pylodstorage>=0.16.4", # soon 0.17.0
    # https://pypi.org/project/networkx/
    "networkx>=3.3",
    # https://pypi.org/project/py-sidif/
    "py-sidif>=0.2.0",
    # NiceGUI widgets
    "ngwidgets>=0.26.1",
    # xsdata for XML data binding
    "xsdata>=24.9",
    # https://pypi.org/project/piecash/
    #"piecash>=1.2.1",
    #"SQLAlchemy==1.4.48",
    #"SQLAlchemy-Utils==0.37.2",
    # https://github.com/chardet/chardet
    "chardet>=5.2.0",
    # beancount
    # https://github.com/beancount/beancount
    # https://pypi.org/project/beancount/2.3.6/
    # was previous version
    #"beancount>=3.0.0",
    "beancount>=3.1.0",
    # https://pypi.org/project/tabulate/
    "tabulate>=0.9.0",
    # beanquery
    # https://pypi.org/project/beanquery/
    "beanquery==0.1.0",
    #"beanquery>=0.2.0",
    # mogwai
    # https://github.com/juupje/pyMogwai
    "pyMogwai>=0.0.9"

]

dynamic = ["version"]

[tool.hatch.version]
path = "nomina/__init__.py"


[project.urls]
Home = "https://github.com/WolfgangFahl/pynomina"
Documentation = "https://wiki.bitplan.com/index.php/pynomina"
Source = "https://github.com/WolfgangFahl/pynomina"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["nomina","nomina_examples"]

[tool.hatch.build.targets.wheel.sources]
"nomina" = "nomina"
"nomina_examples" = "nomina_examples"

[project.scripts]
nomina = "nomina.nomina_cmd:main"
money-zip = "nomina.money_zip:main"
npbeanquery = "nomina.beanquery_cmd:main"
